[ADD] ADDING OUTLET CLIENT WINDOWS LOGS
