# swagger-output.json
@@ -45,6 +45,10 @@
       "description": "Endpoints untuk installmentCart"
     },
     {
+      "name": "logWindows",
+      "description": "Endpoints untuk logWindows"
+    },
+    {
       "name": "member",
       "description": "Endpoints untuk member"
     },
@@ -94,8 +98,8 @@
     }
   ],
   "schemes": [
-    "http",
-    "https"
+    "https",
+    "http"
   ],
   "securityDefinitions": {
     "bearerAuth": {
@@ -113,6 +117,16 @@
     "application/json"
   ],
   "paths": {
+    "/swagger-docs": {
+      "get": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
     "/menu": {
       "get": {
         "description": "",
@@ -2633,6 +2647,92 @@
           }
         }
       }
+    },
+    "/logs": {
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "outlet_id": {
+                  "example": "any"
+                },
+                "outlet_name": {
+                  "example": "any"
+                },
+                "log_code": {
+                  "example": "any"
+                },
+                "log_level": {
+                  "example": "any"
+                },
+                "message": {
+                  "example": "any"
+                },
+                "exception": {
+                  "example": "any"
+                },
+                "source": {
+                  "example": "any"
+                },
+                "additional_info": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "get": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/logs/{id}": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
     }
   },
   "components": {
@@ -2682,6 +2782,10 @@
         "properties": {}
       },
       "installment_cart": {
+        "type": "object",
+        "properties": {}
+      },
+      "log_windows_client": {
         "type": "object",
         "properties": {}
       },
